--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/styles.css' %}" />
     <!-- shop css 테마 -->
     <link rel="stylesheet" type="text/css" href="{% static 'shopapp/css/styles.css' %}" />
+    <!-- quiz css 테마 -->
     
 </head>
 
@@ -70,7 +71,7 @@
         </div>
     </nav>
 
-    <div style="position:fixed; bottom:50px; right:50px;">
+    <div style="position:fixed; bottom:50px; right:50px; z-index: 10;">
         <a href="#page-top"><img height=100 src="{% static 'main/assets/img/navbar/top버튼.png'' %}" alt="..." /></a>
     </div>
 
