--- a/quizapp/templates/quizapp/quiz.html
+++ b/quizapp/templates/quizapp/quiz.html
@@ -3,10 +3,8 @@
 
 {% block content %}
 <section class="page-section" id="quiz">
-    <div class="container font-green text-center">
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"></h2>
-        <h3>퀴즈 TEST</h3>
-        
+    <div class="container text-center">
+
     </div>
 </section>
 {% endblock %}
