--- a/shopapp/templates/shopapp/shop.html
+++ b/shopapp/templates/shopapp/shop.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'shopapp/css/styles.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'main/css/base.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'shopapp/css/shop.css' %}" />
 {% endblock css %}
 
 {% block content %}
@@ -161,7 +162,7 @@
                     <div class="product-price">3000</div>
                 </li>
             </div>
-            <img src="{% static 'shopapp/img/광고임시배너.png' %}">
+            
         </div>
     </div>
 </section>
