--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,5 +1,9 @@
 {% load static %}
 
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'main/css/base.css' %}" />
+{% endblock css %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,16 +15,6 @@
     <title>지구지글</title>
     <!-- 홈페이지 아이콘 -->
     <link rel="icon" type="image/x-icon" href="{% static 'main/assets/icon.png' %}" />
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
-        type="text/css" />
-    <!-- 베이스 css 테마 -->
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/styles.css' %}" />
-    <!-- shop css 테마 -->
-    <link rel="stylesheet" type="text/css" href="{% static 'shopapp/css/styles.css' %}" />
-    <!-- quiz css 테마 -->
-    
 </head>
 
 <body id="page-top">
@@ -29,11 +23,10 @@
         <div class="container">
             <a class="navbar-brand" href="{% url 'main' %}"><img height=30
                     src="{% static 'main/assets/img/navbar/navicon.png' %}" alt="..." /></a>
-            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
+            <button class="navbar-toggler text-uppercase bg-secondary text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 Menu
-                <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
@@ -45,15 +38,15 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="{% url 'quiz' %}">QUIZ</a>
                     </li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#!"><img
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-4 px-0 px-lg-3" href="#!"><img
                                 src="{% static 'main/assets/img/navbar/Search.png' %}" alt="..." /></a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
                         {% if user.is_authenticated %}
-                        <a href="{% url 'editinfo' %}" class="nav-link py-3 px-0 px-lg-3 rounded"><img
+                        <a href="{% url 'editinfo' %}" class="nav-link py-4 px-0 px-lg-3 rounded"><img
                                 src="{% static 'main/assets/img/navbar/mypage.png' %}" alt="..." /></a>
                         {% else %}
-                        <a href="{% url 'signin' %}" class="nav-link py-3 px-0 px-lg-3 rounded"><img
+                        <a href="{% url 'signin' %}" class="nav-link py-4 px-0 px-lg-3 rounded"><img
                                 src="{% static 'main/assets/img/navbar/mypage.png' %}" alt="..." /></a>
                         {% endif %}
                     </li>
@@ -62,8 +55,8 @@
                         <a href="{% url 'logout' %}"
                             class="nav-link py-3 px-0 px-lg-2 py-lg-3 rounded btn btn-signup btn-outline-main">로그아웃</a>
                         {% else %}
-                        <a href="{% url 'signup' %}"
-                            class="nav-link py-3 px-0 px-lg-2 py-lg-3 rounded btn btn-signup btn-outline-main">회원가입</a>
+                        <a href="{% url 'signin' %}"
+                            class="nav-link py-3 px-0 px-lg-2 py-lg-3 rounded btn btn-signup btn-outline-main">로그인</a>
                         {% endif %}
                     </li>
                 </ul>
@@ -71,7 +64,7 @@
         </div>
     </nav>
 
-    <div style="position:fixed; bottom:50px; right:50px; z-index: 10;">
+    <div style="position:fixed; bottom:50px; right:50px;">
         <a href="#page-top"><img height=100 src="{% static 'main/assets/img/navbar/top버튼.png'' %}" alt="..." /></a>
     </div>
 
