--- a/quizapp/templates/quizapp/quiz.html
+++ b/quizapp/templates/quizapp/quiz.html
@@ -1,10 +1,129 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block content %}
-<section class="page-section" id="quiz">
-    <div class="container text-center">
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'quizapp/css/quiz.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'main/css/base.css' %}" />
+{% endblock css %}
 
+
+{% block content %}
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://jchamill.github.io/jquery-quiz/jquery.quiz-min.js'></script><script  src="./script.js"></script>
+<style>
+  h1 {
+    color: #8ABC8D;
+  }
+
+  .faded {
+    color: #777;
+  }
+
+  #quiz-counter {
+    color: #88449a;
+  }
+
+  .quiz-container {
+    padding: 0.25em;
+    max-width: 650px;
+    margin: 1em auto;
+  }
+
+  .quiz-container a {
+    text-decoration: none;
+    color: #333;
+  }
+
+  #quiz-header,
+  #quiz-start-screen,
+  #quiz-results-screen,
+  #quiz-counter {
+    text-align: center;
+  }
+
+  .question {
+    font-size: 1.25em;
+  }
+
+  .answers {
+    list-style: none;
+    padding: 0;
+  }
+
+  .answers a {
+    display: block;
+    padding: 0.5em 1em;
+    margin-bottom: 0.5em;
+    background: #fff;
+  }
+
+  .answers a.correct {
+    background: #090;
+  }
+
+  .answers a.incorrect {
+    background: #c00;
+  }
+
+  .answers a.correct,
+  .answers a.incorrect {
+    color: #fff;
+  }
+
+  #quiz-controls {
+    background: #63c5bc;
+    color: #111;
+    padding: 0.25em 0.5em 0.5em;
+    text-align: center;
+  }
+
+  #quiz-response {}
+
+  #quiz-results {
+    font-size: 1.25em;
+  }
+
+  #quiz-buttons a,
+  .quiz-container .quiz-button {
+    display: inline-block;
+    padding: 0.5em 1em;
+    background: #88449a;
+    color: #fff;
+  }
+
+  #quiz-buttons a {
+    background: #fff;
+    color: #333;
+  }
+
+  /* Quiz State Overrides */
+
+  .quiz-results-state #quiz-controls {
+    background: none;
+    padding: 0;
+  }
+
+  .quiz-results-state #quiz-buttons a {
+    background: #88449a;
+    color: #fff;
+  }
+</style>
+
+<section class="page-section" id="allchallenge">
+  <div class="container text-center">
+    <h2 class="page-section-heading "></h2>
+    <div id="quiz">
+      <div id="quiz-header">
+        <h1>지구지글 환경퀴즈</h1>
+        <p class="faded">알쏭달쏭 헷갈리는 환경 퀴즈?<br>
+          본인의 지식를 확인해보며 포인트도 얻자 !</p>
+      </div>
+      <div id="quiz-start-screen">
+        <a class="btn btn-xl btn-outline-light" id="quiz-start-btn" href="#"> Start </a>
+      </div>
     </div>
+
+
+  </div>
 </section>
 {% endblock %}
